<resources>
    <string name="app_name">EtudeTask</string>
    <string name="subjects_app_bar_title">Subjects</string>
    <string name="timeline_app_bar_title">Timeline</string>
    <string name="dialog_edit_subject_hint_title">Enter title</string>
    <string name="dialog_edit_subject_choose_color_message">Choose a color</string>
    <string name="dialog_add_subject_dialog_title">New subject</string>
    <string name="dialog_edit_subject_dialog_title">Edit</string>
    <string name="text_button_cancel">Cancel</string>
    <string name="text_button_save">Save</string>
    <string name="text_button_delete">Delete</string>
    <string name="toast_message_title_empty">The title is empty</string>
    <string name="context_menu_subject_edit">Edit subject</string>
    <string name="context_menu_subject_delete">Delete subject</string>
    <string name="subject_item_task_count">%1$d of %2$d</string>
    <string name="option_menu_tasks_title">Option menu</string>
    <string name="option_menu_tasks_edit_subject">Edit subject</string>
    <string name="option_menu_tasks_delete_subject">Delete subject</string>
    <string name="option_menu_tasks_delete_completed_tasks">Delete completed</string>
    <string name="alert_dialog_confirmation_title">Are you sure?</string>
    <string name="alert_dialog_delete_subject_message">The subject will be deleted</string>
    <string name="toast_subject_deleted">Subject deleted</string>
    <string name="snackbar_completed_tasks_deleted">Completed tasks deleted</string>
    <string name="snackbar_undo_action">Undo</string>
    <string name="snackbar_task_deleted_message">Task deleted</string>
    <string name="snackbar_task_done_message">Task done</string>
    <string name="task_item_subtask_count">%1$d / %2$d</string>
    <string name="date_format_today">Today</string>
    <string name="date_format_yesterday">Yesterday</string>
    <string name="date_format_tomorrow">Tomorrow</string>
    <string name="add_task_bottom_sheet_hint_task_title">New task</string>
    <string name="hint_add_note">Add note</string>
    <string name="flag_high">High</string>
    <string name="flag_medium">Medium</string>
    <string name="flag_low">Low</string>
    <string name="flag_none">None</string>
    <string name="task_details_task_title">Task title</string>
    <string name="hint_add_subtask">Add subtask</string>
    <string name="hint_subtask_title">Subtask title</string>
    <string name="delete_sub_task_message">\"%1$s\" will be deleted</string>
    <string name="alert_dialog_delete_task_message">The task will be deleted</string>
    <string name="add_subject_button_title">Add subject</string>
    <string name="completed_tasks_count">Completed (%1$d)</string>
    <string name="notification_done_button">Done</string>
    <string name="bottom_nav_menu_subjects_item">Subjects</string>
    <string name="bottom_nav_menu_timeline_item">Timeline</string>
    <string name="bottom_nav_view_settings_item">Settings</string>
    <string name="timeline_list_header_text_today">Today</string>
    <string name="timeline_list_header_text_tomorrow">Tomorrow</string>
    <string name="timeline_list_header_text_upcoming">Upcoming</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="ask_sub_task_preferences">Ask before delete a sub-task</string>
    <string name="theme">Theme</string>
    <string name="preferences_start_page_title">Start Page</string>
    <string name="preference_rate_app_message">Rate this app</string>
    <string name="donations_message">Donations</string>
    <string name="preference_source_code_message">Source code</string>
    <string name="settings_app_bar_title">Settings</string>
    <string name="fab_add_task_description">Add new task</string>
    <string name="share_etude_pref_title">Share EtudeTask</string>
    <string name="version_title">Version</string>

</resources>