<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_more"
        android:orderInCategory="100"
        android:title="@string/option_menu_tasks_title"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/rename_subject"
                android:icon="@drawable/ic_edit"
                android:title="@string/option_menu_tasks_edit_subject" />

            <item
                android:id="@+id/delete_subject"
                android:icon="@drawable/ic_delete_outline"
                android:title="@string/option_menu_tasks_delete_subject" />

            <item
                android:id="@+id/delete_completed_tasks"
                android:icon="@drawable/ic_list_check"
                android:title="@string/option_menu_tasks_delete_completed_tasks" />
        </menu>

    </item>


</menu>